# routes/rewards.js
@@ -2,8 +2,10 @@ import express from 'express';
 const router = express.Router();
 
 import { 
-    getAllRewards, 
-
+    getAllRewards,
+    rewardDetail,
+    getAllBoxes,
+    getUserLiveEventClaims
 } from '../controllers/reward.js';
 
 // Middlewares
@@ -12,6 +14,10 @@ import { verifyUser } from '../middlewares/verifyUser.js';
 router.use(verifyUser);
 
 router.get("/all", getAllRewards);
+router.get("/detail/:id", rewardDetail);
 
+// Legacy routes
+router.get("/all-boxes", getAllBoxes);
+router.get("/live-events/claims", getUserLiveEventClaims);
 
 export default router;
